I added on some of my classmates suggetions and added a new page

--- a/README
+++ b/README
@@ -5,3 +5,6 @@ This is a website for my final project
 Add more images
 #Remove the background from the photos
 Add some colors to the text
+##Classmate suggestions
+1. Gallery/Photo Gallery - when on the homepage it says gallery. When on the about page it says Photo Gallery. I would pick one or the other for consistency through out the website. 
+2. On the About page, Strawberryland seems to be left by itself when first looking through the website. I know it is supposed to be apart of the picture. If you could get the text to be closer to the picture it would be awesome!
